--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 					<h2><span>MESSAGE</span></h2>
 				</header>
 				<div class="innerS">
-					ホームページサンプル株式会社では最新技術と自然との調和を目指します。革新的な技術で世の中を動かす企業を目指します。ホームページサンプル株式会社。ホームページサンプル株式会社では最新技術と自然との調和を目な技術で世の中を動かす企業を目指します。ホームページサンプル株式会社では最新技術と自然との調和を目指します。革新的な技術で世の中を動かす企業を目指します。
-				</div>
+					卒業旅行いっぱい楽しもうね！！！
 			</section>
 			<!-- // MESSAGE -->
 			<!-- GALLERY -->
