--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 					卒業旅行いっぱい楽しもうね！！！
 			</section>
 			<!-- // MESSAGE -->
-			<!-- GALLERY -->
+			<!-- Packing List -->
 			<section id="sec02">
 				<header>
-					<h2><span>GALLERY</span></h2>
+					<h2><span>Packing List</span></h2>
 				</header>
 				<ul id="gallery">
 					<li><img src="images/photo01.jpg" width="360" height="350" alt=""></li>
@@ -70,7 +70,7 @@
 					<li><img src="images/photo13.jpg" width="360" height="350" alt=""></li>
 				</ul>
 			</section>
-			<!-- // GALLERY -->
+			<!-- // Packing List -->
 			<!-- BRAND -->
 			<section id="sec03">
 				<header>
