--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<ul>
 							<li><a href="#top">TOP</a></li>
 							<li><a href="#sec01">MESSAGE</a></li>
-							<li><a href="#sec02">GALLERY</a></li>
+							<li><a href="#sec02">Packing List</a></li>
 							<li><a href="#sec03">BRAND</a></li>
 							<li><a href="#sec04">PROJECT</a></li>
 							<li><a href="#sec05">COMPANY</a></li>
