--- a/index.html
+++ b/index.html
@@ -54,6 +54,41 @@
 				<header>
 					<h2><span>Packing List</span></h2>
 				</header>
+
+				<p>旅行やお出かけの際に必要な持ち物リストです。忘れ物がないようにチェックしましょう！</p>
+
+    <div class="category">
+        <h3>衣類（Clothing）</h3>
+        <ul>
+            <li><input type="checkbox"> Tシャツ</li>
+            <li><input type="checkbox"> ズボン / ショートパンツ</li>
+            <li><input type="checkbox"> 靴下</li>
+            <li><input type="checkbox"> ジャケット</li>
+            <li><input type="checkbox"> 靴</li>
+        </ul>
+    </div>
+
+    <div class="category">
+        <h3>洗面用具（Toiletries）</h3>
+        <ul>
+            <li><input type="checkbox"> 歯ブラシ & 歯磨き粉</li>
+            <li><input type="checkbox"> シャンプー & コンディショナー</li>
+            <li><input type="checkbox"> 髭剃り</li>
+            <li><input type="checkbox"> デオドラント</li>
+        </ul>
+    </div>
+
+    <div class="category">
+        <h3>必需品（Essentials）</h3>
+        <ul>
+            <li><input type="checkbox"> パスポート</li>
+            <li><input type="checkbox"> スマホ & 充電器</li>
+            <li><input type="checkbox"> 財布 & 現金</li>
+            <li><input type="checkbox"> 旅行書類</li>
+        </ul>
+    </div>
+
+				
 				
 			</section>
 			<!-- // Packing List -->
