--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
 			<!-- Packing List -->
 			<section id="sec02">
 				<header>
-					<h2><span>Packing List</span></h2>
+					<h2><span>持ち物リスト</span></h2>
 				</header>
 
-				<p>旅行やお出かけの際に必要な持ち物リストです。忘れ物がないようにチェックしましょう！</p>
+    　　　　　　　　　　　　　　　　　<p>旅行やお出かけの際に必要な持ち物リストです。忘れ物がないようにチェックしましょう！</p>
 
-   　　　　　　　　　　　　　　　　　 <div class="category">
-       　　　　　　　　　　　　　　　 <h3>衣類（Clothing）</h3>
-       　　　　　　　　　　　　　　　　 <ul>
-           　　　　　　　　　　　　　　 <li><input type="checkbox"> Tシャツ</li>
-          　　　　　　　　　　　　　　  <li><input type="checkbox"> ズボン / ショートパンツ</li>
-          　　　　　　　　　　　　　　  <li><input type="checkbox"> 靴下</li>
-         　　　　　　　　　　　　　　   <li><input type="checkbox"> ジャケット</li>
-        　　　　　　　　　　　　　　    <li><input type="checkbox"> 靴</li>
-       　　　　　　　　　　　　　　　　 </ul>
-   　　　　　　　　　　　　　　　　　　 </div>
+    　　　　　　　　　　　　　　　　　<div class="category">
+			     　　　　　<h3>衣類（Clothing）</h3>
+			     　　　　　<ul>
+           　　　　　　　　　　　　　　　　　 <li><input type="checkbox"> Tシャツ</li>
+            　　　　　　　　　　　　　　　　　<li><input type="checkbox"> ズボン / ショートパンツ</li>
+            　　　　　　　　　　　　　　　　　<li><input type="checkbox"> 靴下</li>
+            <li><input type="checkbox"> ジャケット</li>
+            <li><input type="checkbox"> 靴</li>
+        </ul>
+    </div>
 
     <div class="category">
         <h3>洗面用具（Toiletries）</h3>
@@ -87,10 +87,43 @@
             <li><input type="checkbox"> 旅行書類</li>
         </ul>
     </div>
+</section>
+<!-- // Packing List -->
 
-				
-				
-			</section>
+<style>
+    /* セクション全体を中央揃え */
+    #sec02 {
+        text-align: center;
+    }
+
+    /* 見出しのスタイル */
+    #sec02 h2 {
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+    /* 各カテゴリのスタイル */
+    .category {
+        display: inline-block;
+        text-align: left;
+        margin: 20px;
+    }
+
+    .category h3 {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    .category ul {
+        list-style-type: none;
+        padding: 0;
+    }
+
+    .category li {
+        margin-bottom: 8px;
+    }
+</style>
+
 			<!-- // Packing List -->
 			<!-- BRAND -->
 			<section id="sec03">
