--- a/index.html
+++ b/index.html
@@ -23,16 +23,11 @@
 							<li><a href="#top">TOP</a></li>
 							<li><a href="#sec01">MESSAGE</a></li>
 							<li><a href="#sec02">Packing List</a></li>
-							<li><a href="#sec03">BRAND</a></li>
-							<li><a href="#sec04">PROJECT</a></li>
-							<li><a href="#sec05">COMPANY</a></li>
+							<li><a href="#sec03">Day 1</a></li>
+							<li><a href="#sec04">Day 2</a></li>
+							<li><a href="#sec05">Day 3</a></li>
 						</ul>
-						<ul id="sns">
-							<li><a href="#" target="_blank"><img src="images/iconFb.png" width="20" height="20" alt="FB"></a></li>
-							<li><a href="#" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
-							<li><a href="#" target="_blank"><img src="images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
-							<li><a href="#" target="_blank"><img src="images/iconYouTube.png" width="20" height="20" alt="You Tube"></a></li>
-						</ul>
+						
 					</div>
 				</nav>
 			</div>
@@ -125,10 +120,10 @@
 </style>
 
 			<!-- // Packing List -->
-			<!-- BRAND -->
+			<!-- Day 1 -->
 			<section id="sec03">
 				<header>
-					<h2><span>BRAND</span></h2>
+					<h2><span>Day 1</span></h2>
 				</header>
 				<div class="inner">
 					<ul class="col4">
@@ -151,11 +146,11 @@
 					</ul>
 				</div>
 			</section>
-			<!-- // BRAND -->
-			<!-- PROJECT -->
+			<!-- // Day 1 -->
+			<!-- Day 2 -->
 			<section id="sec04">
 				<header>
-					<h2><span>PROJECT</span></h2>
+					<h2><span>Day 2</span></h2>
 				</header>
 				<div class="inner">
 					<div class="article">
@@ -170,11 +165,11 @@
 					</div>
 				</div>
 			</section>
-			<!-- // PROJECT -->
-			<!-- COMPANY -->
+			<!-- // Day 2 -->
+			<!-- Day 3 -->
 			<section id="sec05">
 				<header>
-					<h2><span>COMPANY</span></h2>
+					<h2><span>Day 3</span></h2>
 				</header>
 				<div class="inner">
 					<ul class="col2">
@@ -195,7 +190,7 @@
 					</ul>
 				</div>
 			</section>
-			<!-- // COMPANY -->
+			<!-- // Day 3 -->
 
 			<footer id="footer">
 				Copyright(c) 2016 Sample Inc. All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank">http://f-tpl.com</a><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
