--- a/index.html
+++ b/index.html
@@ -126,24 +126,108 @@
 					<h2><span>Day 1</span></h2>
 				</header>
 				<div class="inner">
-					<ul class="col4">
-						<li>
-							<p class="img"><img src="images/logo01.png" width="168" height="168" alt=""></p>
-							<p>ホームページサンプル株式会社では最動かす企業を目指します。</p>
-						</li>
-						<li>
-							<p class="img"><img src="images/logo02.png" width="168" height="168" alt=""></p>
-							<p>革新的な技術で世の中を動かす企業を目します。世の中を動かす。</p>
-						</li>
-						<li>
-							<p class="img"><img src="images/logo03.png" width="168" height="168" alt=""></p>
-							<p>株式会社では最動かす企業を目指しますージン企業を目指します。</p>
-						</li>
-						<li>
-							<p class="img"><img src="images/logo04.png" width="168" height="168" alt=""></p>
-							<p>株式会社では最動かす企業を指しますージサン企業を目指します。</p>
-						</li>
-					</ul>
+					<ul class="time-schedule">
+  <li>
+    <span class="time">9:20</span>
+    <div class="sch_box"><p class="sch_title">タイトル</p>
+      <p class="sch_tx">
+      内容テキストテキストテキスト<br>テキストテキストテキストテキスト
+      </p>
+   </div>
+  </li>
+  <li>
+    <span class="time">10:00</span>
+    <div class="sch_box">
+     <p class="sch_title">タイトル</p>
+      <p class="sch_tx">内容テキスト
+      </p>
+    </div>
+  </li>
+  <li>
+    <span class="time">11:00</span>
+    <div class="sch_box"><p class="sch_title">タイトル</p>
+      <p class="sch_tx">
+      内容テキスト
+      </p>
+    </div>
+  </li>
+  <li>
+    <span class="time">12:00</span>
+    <div class="sch_box"><p class="sch_title">タイトル</p>
+      <p class="sch_tx">
+      内容テキスト
+      </p>
+    </div>
+  </li>
+</ul>
+*{
+  margin:0;
+  padding:0;
+  line-height: 1.3em;
+} 
+/* time-schedule */
+.time-schedule {
+  min-width: 400px;
+  max-width: 400px;
+  list-style: none;
+  margin: 0 auto 0 6em;
+  padding-left: 20px;
+  border-left: 6px solid #a7be18;
+  box-sizing: border-box;
+}
+
+.time-schedule li {
+  width: 100%;
+  margin: 0 0;
+  padding: 5px 0;
+  position: relative;
+}
+
+.time-schedule span.time {
+  width: 5em;
+  display: inline-block;
+  margin-left: -8em;
+  padding: 0 0 5px;
+  margin-top: 15px;
+  vertical-align: top;
+  position: relative;
+  text-align: right;
+  box-sizing: border-box;
+}
+
+.time-schedule span.time::after {
+  content: "";
+  position: absolute;
+  right: -35px;
+  top: 0;
+  background: #a7be18;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+}
+
+.time-schedule .sch_box {
+  display: inline-block;
+  width: 100%;
+  margin-left: 30px;
+  padding: 15px 10px 15px 10px;
+  vertical-align: middle;
+  background: #efefef;
+  box-sizing: border-box;
+  border-radius: 6px;
+}
+
+.time-schedule .sch_title {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.time-schedule .sch_tx {
+  font-size: 14px;
+  font-weight: normal;
+}
+
+					
 				</div>
 			</section>
 			<!-- // Day 1 -->
